<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_details_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/lightGrey">

    <ImageView
        android:id="@+id/img_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_backdrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkTranslucent" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pureWhite"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_details_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?android:attr/colorPrimary"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/text_movie_backdrop"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_backdrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/sample_backdrop_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_details"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/img_detail_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:contentDescription="@string/text_favourite_icon"
                    android:padding="@dimen/margin_medium"
                    android:src="@drawable/ic_star_filled_gray" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <org.drulabs.popularmovies.ui.custom.FloatingImageView
        android:id="@+id/img_detail_poster"
        android:layout_width="@dimen/movie_anchor_width"
        android:layout_height="@dimen/movie_anchor_width"
        android:layout_margin="@dimen/margin_medium"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/pureWhite"
        android:contentDescription="@string/text_movie_poster"
        android:fitsSystemWindows="true"
        android:padding="4dp"
        android:src="@drawable/ic_placeholder"
        app:layout_anchor="@+id/app_bar_details"
        app:layout_anchorGravity="bottom|end"
        app:layout_collapseMode="parallax"
        app:useCompatPadding="true" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_details_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_movie_detail_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_detail_movie_year"
                        style="@style/detail_movie_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_x_large"
                        android:drawablePadding="@dimen/margin_medium"
                        android:drawableStart="@drawable/ic_calendar_today_24dp"
                        android:visibility="gone"
                        tools:text="Release year: 2015" />

                    <TextView
                        android:id="@+id/tv_detail_movie_runtime"
                        style="@style/detail_movie_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_x_large"
                        android:drawablePadding="@dimen/margin_medium"
                        android:drawableStart="@drawable/ic_run_time_black_24dp"
                        android:textStyle="bold|italic"
                        android:visibility="gone"
                        tools:text="Runtime: 120 min" />

                    <TextView
                        android:id="@+id/tv_detail_movie_rating"
                        style="@style/detail_movie_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_x_large"
                        android:drawablePadding="@dimen/margin_medium"
                        android:drawableStart="@drawable/ic_rating_stars_24dp"
                        android:textSize="@dimen/txt_regular"
                        android:visibility="gone"
                        tools:text="IMDB Rating: 8.9 / 10" />
                </LinearLayout>

                <View
                    android:id="@+id/separator_movie_detail_holder"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ll_movie_detail_holder"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@color/dark_grey" />

                <TextView
                    android:id="@+id/tv_details_synopsis_label"
                    style="@style/detail_movie_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separator_movie_detail_holder"
                    android:layout_marginStart="@dimen/margin_x_large"
                    android:text="@string/txt_synopsis"
                    android:textStyle="bold|italic" />

                <View
                    android:id="@+id/separator_synopsis_label"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tv_details_synopsis_label"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@color/dark_grey" />

                <TextView
                    android:id="@+id/tv_details_synopsis"
                    style="@style/detail_movie_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separator_synopsis_label"
                    android:layout_margin="@dimen/margin_medium"
                    android:textSize="@dimen/txt_large"
                    android:textStyle="normal"
                    tools:text="@string/really_long_text" />

                <View
                    android:id="@+id/separator_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tv_details_synopsis"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@color/dark_grey" />

                <TextView
                    android:id="@+id/tv_trailers_and_reviews"
                    style="@style/detail_movie_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separator_synopsis"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/txt_trailers_reviews"
                    android:textStyle="normal" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/pb_details_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
