<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl_details_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_toolbar_height"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_details_collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="center_vertical"
                app:expandedTitleTextAppearance="@style/expanded_title_appearance"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_details"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:title="@string/txt_movie_detail"
                    app:titleTextColor="@color/pureWhite">

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_movie_detail_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/img_detail_poster"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/text_movie_poster"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_placeholder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_detail_movie_year"
                            style="@style/detail_movie_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            tools:text="2015" />

                        <TextView
                            android:id="@+id/tv_detail_movie_runtime"
                            style="@style/detail_movie_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            android:textStyle="bold|italic"
                            tools:text="120min" />

                        <TextView
                            android:id="@+id/tv_detail_movie_rating"
                            style="@style/detail_movie_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            android:textColor="@color/pureBlack"
                            android:textSize="@dimen/txt_medium"
                            tools:text="120min" />

                        <Button
                            android:id="@+id/btn_detail_favorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            android:background="@drawable/favorite_drawable"
                            android:paddingEnd="@dimen/margin_medium"
                            android:paddingStart="@dimen/margin_medium"
                            android:text="@string/txt_mark_favorite"
                            android:textColor="@color/pureWhite"
                            android:textSize="@dimen/txt_medium" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_details_synopsis"
                    style="@style/detail_movie_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_movie_detail_holder"
                    android:layout_margin="@dimen/margin_medium"
                    android:textSize="@dimen/txt_medium"
                    android:textStyle="normal"
                    tools:text="@string/really_long_text" />

                <View
                    android:id="@+id/separator_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tv_details_synopsis"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@color/dark_grey" />

                <TextView
                    android:id="@+id/tv_trailers_and_reviews"
                    style="@style/detail_movie_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separator_synopsis"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/txt_trailers_reviews"
                    android:textStyle="normal" />

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/pb_details_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
